--- a/IdanEngine/IdanEngine/IdanEngine.csproj
+++ b/IdanEngine/IdanEngine/IdanEngine.csproj
@@ -42,11 +42,16 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Animation.cs" />
+    <Compile Include="Camera.cs" />
+    <Compile Include="Entity.cs" />
     <Compile Include="FontType.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="HUD.cs" />
     <Compile Include="Image.cs" />
     <Compile Include="MenuScreen.cs" />
     <Compile Include="GameScreen.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screen.cs" />
