--- a/IdanEngine/IdanEngine/IdanEngine.csproj
+++ b/IdanEngine/IdanEngine/IdanEngine.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Animation.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Entity.cs" />
+    <Compile Include="EntityType.cs" />
     <Compile Include="FontType.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="HUD.cs" />
