--- a/IdanEngine/IdanEngine/IdanEngine.csproj
+++ b/IdanEngine/IdanEngine/IdanEngine.csproj
@@ -50,6 +50,10 @@
     <Compile Include="Game1.cs" />
     <Compile Include="HUD.cs" />
     <Compile Include="Image.cs" />
+    <Compile Include="Level.cs" />
+    <Compile Include="LevelEntity.cs" />
+    <Compile Include="Map.cs" />
+    <Compile Include="MapName.cs" />
     <Compile Include="MenuScreen.cs" />
     <Compile Include="GameScreen.cs" />
     <Compile Include="Player.cs" />
