--- a/IdanEngine/IdanEngine/IdanEngine.csproj
+++ b/IdanEngine/IdanEngine/IdanEngine.csproj
@@ -42,27 +42,26 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Animation.cs" />
-    <Compile Include="Block.cs" />
+    <Compile Include="Components\Animation\Animation.cs" />
+    <Compile Include="Components\Animation\AnimationState.cs" />
     <Compile Include="Camera.cs" />
-    <Compile Include="Entity.cs" />
-    <Compile Include="EntityType.cs" />
-    <Compile Include="FontType.cs" />
+    <Compile Include="Player\Character\Character.cs" />
+    <Compile Include="Player\Character\CharacterName.cs" />
+    <Compile Include="Direction.cs" />
+    <Compile Include="Components\GUI\FontType.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="HUD.cs" />
-    <Compile Include="Image.cs" />
-    <Compile Include="Level.cs" />
-    <Compile Include="LevelEntity.cs" />
-    <Compile Include="Map.cs" />
-    <Compile Include="MapName.cs" />
-    <Compile Include="MenuScreen.cs" />
-    <Compile Include="GameScreen.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Components\GUI\Image.cs" />
+    <Compile Include="Map\Map.cs" />
+    <Compile Include="Map\MapName.cs" />
+    <Compile Include="Screen\MenuScreen.cs" />
+    <Compile Include="Screen\GameScreen.cs" />
+    <Compile Include="Player\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Screen.cs" />
-    <Compile Include="ScreenType.cs" />
-    <Compile Include="Text.cs" />
+    <Compile Include="Screen\Screen.cs" />
+    <Compile Include="Screen\ScreenType.cs" />
+    <Compile Include="Components\GUI\Text.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -123,6 +122,7 @@
     </None>
     <None Include="app.manifest" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
