--- a/IdanEngine/IdanEngine/IdanEngine.csproj
+++ b/IdanEngine/IdanEngine/IdanEngine.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Components\Animation\AnimationState.cs" />
     <Compile Include="Components\Camera\Camera.cs" />
     <Compile Include="Map\Cloud.cs" />
+    <Compile Include="Map\MapEntity.cs" />
+    <Compile Include="Map\MapEntityName.cs" />
     <Compile Include="Player\Character\Character.cs" />
     <Compile Include="Player\Character\CharacterName.cs" />
     <Compile Include="Direction.cs" />
