added knight afk animation

--- a/IdanEngine/IdanEngine/Castle Bridge.csproj
+++ b/IdanEngine/IdanEngine/Castle Bridge.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Components\GUI\Image.cs" />
     <Compile Include="Map\Map.cs" />
     <Compile Include="Map\MapName.cs" />
+    <Compile Include="Player\Character\Knight\Knight.cs" />
     <Compile Include="Player\Character\Weapon.cs" />
     <Compile Include="Player\PlayerState.cs" />
     <Compile Include="Player\Team.cs" />
