improve game classes

--- a/IdanEngine/IdanEngine/Castle Bridge.csproj
+++ b/IdanEngine/IdanEngine/Castle Bridge.csproj
@@ -46,30 +46,31 @@
     <Compile Include="Components\Animation\AnimationState.cs" />
     <Compile Include="Components\Camera\Camera.cs" />
     <Compile Include="Components\Popup\Popup.cs" />
-    <Compile Include="Map\Castle\Castle.cs" />
-    <Compile Include="Map\Castle\Chest.cs" />
+    <Compile Include="Team\Castle\Castle.cs" />
+    <Compile Include="Team\Castle\Chest.cs" />
     <Compile Include="Map\Cloud.cs" />
     <Compile Include="Map\MapEntity.cs" />
     <Compile Include="Map\MapEntityName.cs" />
-    <Compile Include="Player\Character\Archer\Archer.cs" />
-    <Compile Include="Player\Character\Archer\Arrow.cs" />
-    <Compile Include="Player\Character\Character.cs" />
-    <Compile Include="Player\Character\CharacterName.cs" />
+    <Compile Include="Team\Player\Character\Archer\Archer.cs" />
+    <Compile Include="Team\Player\Character\Archer\Arrow.cs" />
+    <Compile Include="Team\Player\Character\Character.cs" />
+    <Compile Include="Team\Player\Character\CharacterName.cs" />
     <Compile Include="Direction.cs" />
     <Compile Include="Components\GUI\FontType.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="CastleBridge.cs" />
     <Compile Include="HUD\HUD.cs" />
     <Compile Include="Components\GUI\Image.cs" />
     <Compile Include="Map\Map.cs" />
     <Compile Include="Map\MapName.cs" />
-    <Compile Include="Player\Character\Knight\Knight.cs" />
-    <Compile Include="Player\Character\Mage\Mage.cs" />
-    <Compile Include="Player\Character\Weapon.cs" />
-    <Compile Include="Player\PlayerState.cs" />
-    <Compile Include="Player\Team.cs" />
+    <Compile Include="Team\Player\Character\Knight\Knight.cs" />
+    <Compile Include="Team\Player\Character\Mage\EnergyBall.cs" />
+    <Compile Include="Team\Player\Character\Mage\Mage.cs" />
+    <Compile Include="Team\Player\Character\Weapon.cs" />
+    <Compile Include="Team\Player\PlayerState.cs" />
+    <Compile Include="Team\TeamName.cs" />
     <Compile Include="Screen\MenuScreen.cs" />
     <Compile Include="Screen\GameScreen.cs" />
-    <Compile Include="Player\Player.cs" />
+    <Compile Include="Team\Player\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screen\Screen.cs" />
