--- a/CastleBridge/CastleBridge/Castle Bridge.csproj
+++ b/CastleBridge/CastleBridge/Castle Bridge.csproj
@@ -46,9 +46,12 @@
     <Compile Include="Components\Animation\AnimationState.cs" />
     <Compile Include="Components\Camera\Camera.cs" />
     <Compile Include="Components\Popup\Popup.cs" />
+    <Compile Include="Map\Weather\Cloud\Rain Drop\RainDrop.cs" />
+    <Compile Include="Map\Weather\TimeType.cs" />
+    <Compile Include="Map\Weather\Weather.cs" />
     <Compile Include="Team\Castle\Castle.cs" />
     <Compile Include="Team\Castle\Chest.cs" />
-    <Compile Include="Map\Cloud.cs" />
+    <Compile Include="Map\Weather\Cloud\Cloud.cs" />
     <Compile Include="Map\MapEntity.cs" />
     <Compile Include="Map\MapEntityName.cs" />
     <Compile Include="Team\Horse\Horse.cs" />
