--- a/CastleBridge/CastleBridge/Castle Bridge.csproj
+++ b/CastleBridge/CastleBridge/Castle Bridge.csproj
@@ -44,12 +44,18 @@
   <ItemGroup>
     <Compile Include="Components\Animation\Animation.cs" />
     <Compile Include="Components\Animation\AnimationState.cs" />
+    <Compile Include="Components\Button\Button.cs" />
     <Compile Include="Components\Camera\Camera.cs" />
     <Compile Include="Components\Popup\Popup.cs" />
     <Compile Include="Map\Location.cs" />
     <Compile Include="Map\Weather\Cloud\Rain Drop\RainDrop.cs" />
     <Compile Include="Map\Weather\TimeType.cs" />
     <Compile Include="Map\Weather\Weather.cs" />
+    <Compile Include="Screen\Menu\Menu.cs" />
+    <Compile Include="Screen\Menu\MenuPage.cs" />
+    <Compile Include="Screen\Menu\Pages\Character Selection\CharacterSelectionMenu.cs" />
+    <Compile Include="Screen\Menu\Pages\Main Menu\MainMenu.cs" />
+    <Compile Include="Screen\Menu\Pages\Team Selection\TeamSelectionMenu.cs" />
     <Compile Include="Team\Castle\Castle.cs" />
     <Compile Include="Team\Castle\Diamond.cs" />
     <Compile Include="Map\Weather\Cloud\Cloud.cs" />
@@ -76,8 +82,8 @@
     <Compile Include="Team\Player\PlayerState.cs" />
     <Compile Include="Team\Team.cs" />
     <Compile Include="Team\TeamName.cs" />
-    <Compile Include="Screen\MenuScreen.cs" />
-    <Compile Include="Screen\GameScreen.cs" />
+    <Compile Include="Screen\Menu\MenuScreen.cs" />
+    <Compile Include="Screen\Game\GameScreen.cs" />
     <Compile Include="Team\Player\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
