--- a/CastleBridge/CastleBridge/Castle Bridge.csproj
+++ b/CastleBridge/CastleBridge/Castle Bridge.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Map\Weather\Cloud\Rain Drop\RainDrop.cs" />
     <Compile Include="Map\Weather\TimeType.cs" />
     <Compile Include="Map\Weather\Weather.cs" />
+    <Compile Include="Online\GameClient.cs" />
     <Compile Include="Screen\Menu\Menu.cs" />
     <Compile Include="Screen\Menu\MenuPage.cs" />
     <Compile Include="Screen\Menu\Pages\Character Selection\CharacterSelectionMenu.cs" />
@@ -93,9 +94,13 @@
     <Compile Include="Components\GUI\Text.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="CastleBridge.OnlineLibraries">
+      <HintPath>..\..\..\..\..\..\Desktop\ClassLibrary\CastleBridge.OnlineLibraries\CastleBridge.OnlineLibraries\bin\Debug\netstandard2.0\CastleBridge.OnlineLibraries.dll</HintPath>
+    </Reference>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
     <Reference Include="System" />
     <Reference Include="System.Xml" />
   </ItemGroup>
