--- a/CastleBridge/CastleBridge/Castle Bridge.csproj
+++ b/CastleBridge/CastleBridge/Castle Bridge.csproj
@@ -94,8 +94,9 @@
     <Compile Include="Components\GUI\Text.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="CastleBridge.OnlineLibraries">
-      <HintPath>..\..\..\..\..\..\Desktop\ClassLibrary\CastleBridge.OnlineLibraries\CastleBridge.OnlineLibraries\bin\Debug\netstandard2.0\CastleBridge.OnlineLibraries.dll</HintPath>
+    <Reference Include="CastleBridge.OnlineLibraries, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\castlebridge-online-libraries\CastleBridge.OnlineLibraries\CastleBridge.OnlineLibraries\bin\Debug\netstandard2.0\CastleBridge.OnlineLibraries.dll</HintPath>
     </Reference>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
